flambda-backend/tests/backend/zero_alloc_checker/fail24.output
File "fail24.ml", line 2, characters 7-17:
Error: Annotation check for zero_alloc failed on function Fail24.f.unsafe_set_int64 (camlFail24.unsafe_set_int64_HIDE_STAMP)

File "fail24.ml", line 6, characters 4-54:
Error: called function may allocate (external call to caml_ba_set_1)

File "fail24.ml", line 6, characters 38-54:
Error: allocation of 24 bytes
